@@ -1,5 +1,10 @@
 package eu.europeana.metis.mediaprocessing.http;
 
+import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+
 import com.github.tomakehurst.wiremock.junit5.WireMockExtension;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.RegisterExtension;
@@ -7,12 +12,11 @@ import org.junit.jupiter.api.extension.RegisterExtension;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
-import static com.github.tomakehurst.wiremock.client.WireMock.get;
-import static com.github.tomakehurst.wiremock.core.WireMockConfiguration.wireMockConfig;
-import static org.junit.jupiter.api.Assertions.assertEquals;
+
 
 class MimeTypeDetectHttpClientTest {
     private static final String EXPECTED_AUDIO_MIME_TYPE = "audio/mpeg";
@@ -21,39 +25,39 @@ class MimeTypeDetectHttpClientTest {
             .options(wireMockConfig().dynamicPort().dynamicHttpsPort())
             .build();
 
-    private MimeTypeDetectHttpClient mimeTypeDetectHttpClient
-            = new MimeTypeDetectHttpClient(5000, 5000, 5000);
+  private final MimeTypeDetectHttpClient mimeTypeDetectHttpClient
+      = new MimeTypeDetectHttpClient(5000, 5000, 5000);
 
-    @Test
-    void getResourceUrl() throws MalformedURLException {
-        // when
-        String resultUrl = mimeTypeDetectHttpClient.getResourceUrl(new URL("http://localhost"));
+  @Test
+  void getResourceUrl() throws MalformedURLException, URISyntaxException {
+    // when
+    String resultUrl = mimeTypeDetectHttpClient.getResourceUrl(new URI("http://localhost").toURL());
 
-        // then
-        assertEquals("http://localhost", resultUrl);
+    // then
+    assertEquals("http://localhost", resultUrl);
+  }
+
+  @Test
+  void download_withContentDisposition_expectSuccess() throws IOException, URISyntaxException {
+    // given
+    try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/audio_test.mp3")) {
+      byte[] audioBytes = inputStream.readAllBytes();
+      wireMockExtension.stubFor(get("/imagen_id.do?idImagen=10610909").willReturn(aResponse()
+          .withStatus(200)
+          .withBody(audioBytes)
+          .withHeader("Content-Disposition", "inline; filename=\"F34-0003_0001.mp3\"")
+          .withHeader("Content-Type", "audio/mpeg")));
     }
-
-    @Test
-    void download_withContentDisposition_expectSuccess() throws IOException {
-        // given
-        try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/audio_test.mp3")) {
-            byte[] audioBytes = inputStream.readAllBytes();
-            wireMockExtension.stubFor(get("/imagen_id.do?idImagen=10610909").willReturn(aResponse()
-                    .withStatus(200)
-                    .withBody(audioBytes)
-                    .withHeader("Content-Disposition", "inline; filename=\"F34-0003_0001.mp3\"")
-                    .withHeader("Content-Type", "audio/mpeg")));
-        }
-        final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
-        // when
-        String detectedMimeType = mimeTypeDetectHttpClient.download(new URL(url));
+    final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
+    // when
+    String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
 
         // then
         assertEquals(EXPECTED_AUDIO_MIME_TYPE, detectedMimeType);
     }
 
     @Test
-    void download_detectMimeTypeStlAscii_expectSuccess() throws IOException {
+    void download_detectMimeTypeStlAscii_expectSuccess() throws IOException, URISyntaxException {
         // given
         try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/block100.stl")) {
             byte[] fileBytes = inputStream.readAllBytes();
@@ -64,14 +68,14 @@ class MimeTypeDetectHttpClientTest {
         }
         final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
         // when
-        String detectedMimeType = mimeTypeDetectHttpClient.download(new URL(url));
+        String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
 
         // then
         assertEquals("model/x.stl-ascii", detectedMimeType);
     }
 
     @Test
-    void download_detectMimeTypeStlBinary_expectSuccess() throws IOException {
+    void download_detectMimeTypeStlBinary_expectSuccess() throws IOException, URISyntaxException {
         // given
         try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/Cube_3d_printing_sample.stl")) {
             byte[] fileBytes = inputStream.readAllBytes();
@@ -82,14 +86,14 @@ class MimeTypeDetectHttpClientTest {
         }
         final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
         // when
-        String detectedMimeType = mimeTypeDetectHttpClient.download(new URL(url));
+        String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
 
         // then
         assertEquals("model/x.stl-binary", detectedMimeType);
     }
 
     @Test
-    void download_returnProvidedMimeType_expectSuccess() throws IOException {
+    void download_returnProvidedMimeType_expectSuccess() throws IOException, URISyntaxException {
         // given
         try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/Cube_3d_printing_sample.stl")) {
             byte[] fileBytes = inputStream.readAllBytes();
@@ -101,10 +105,46 @@ class MimeTypeDetectHttpClientTest {
         }
         final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
         // when
-        String detectedMimeType = mimeTypeDetectHttpClient.download(new URL(url));
+        String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
 
         // then
         assertEquals("model/stl", detectedMimeType);
     }
+
+  @Test
+  void download_detectMimeTypeGltf_expectSuccess() throws IOException, URISyntaxException {
+    // given
+    try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/adamHead.gltf")) {
+      byte[] audioBytes = inputStream.readAllBytes();
+      wireMockExtension.stubFor(get("/imagen_id.do?idImagen=10610909").willReturn(aResponse()
+          .withStatus(200)
+          .withBody(audioBytes)
+          .withHeader("Content-Disposition", "inline; filename=\"adamHead.gltf\"")));
+    }
+    final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
+    // when
+    String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
+
+    // then
+    assertEquals("model/gltf+json", detectedMimeType);
+  }
+
+  @Test
+  void download_detectMimeTypeGlb_expectSuccess() throws IOException, URISyntaxException {
+    // given
+    try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream("__files/Duck.glb")) {
+      byte[] audioBytes = inputStream.readAllBytes();
+      wireMockExtension.stubFor(get("/imagen_id.do?idImagen=10610909").willReturn(aResponse()
+          .withStatus(200)
+          .withBody(audioBytes)
+          .withHeader("Content-Disposition", "inline; filename=\"Duck.glb\"")));
+    }
+    final String url = String.format("http://localhost:%d/imagen_id.do?idImagen=10610909", wireMockExtension.getPort());
+    // when
+    String detectedMimeType = mimeTypeDetectHttpClient.download(new URI(url).toURL());
+
+    // then
+    assertEquals("model/gltf-binary", detectedMimeType);
+  }
 
 }
